# ColloLog

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
benchmark/: CMakeLists.txt  benchmarks.cpp  main.cpp
benchmark/include/: NaiveLogger.h  benchmarks.h
benchmark/script/: DropRate.cpp  overall_score.py  plot_benchmark_data.py
benchmark/src/: NaiveLogger.cpp  benchmarks.cpp  main.cpp
cmake/: ColloLogConfig.cmake.in
include/: ColloEnums.h  ColloLog.h  ColloLogger.h  CollogUtils.h  LocalLogger.h  NaiveLogger.h  RingBuffer.h  RingLocal.h  RingLocalLogger.h  RingLockFreeZAllocator.h  RingLogger.h  ThreadPool.h
include/ColloLog/: ColloLogger.h  Enums.h  LocalLogger.h  NaiveLogger.h  RingBuffer.h  RingLocal.h  RingLogger.h  ThreadPool.h
script/: result_it_one.txt
src/: ColloEnums.cpp  ColloLog.cpp  ColloLogger.cpp  CollogUtils.cpp  Enums.cpp  Levels.cpp  LocalLogger.cpp  NaiveLogger.cpp  RingBuffer.cpp  RingLocal.cpp  RingLocalLogger.cpp  RingLockFreeZAllocator.cpp  RingLogger.cpp  ThreadPool.cpp  main.cpp
